--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "trix": "^0.11.2",
     "vue-instantsearch": "^1.5.1",
     "vue-js-modal": "^1.3.12",
-    "vue-template-compiler": "^2.5.13"
+    "vue-template-compiler": "^2.5.13",
+    "vue-upload-component": "^2.8.5"
   }
 }
