--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,5 @@
 {
-    "/js/app.js": "/js/app.js",
-    "/css/app.css": "/css/app.css"
+    "/js/app.js": "/js/app.js?id=4c9de179b323bd127d21",
+    "/css/app.css": "/css/app.css?id=a0e31bca43bceed5f90f",
+    "/js/vendor.js": "/js/vendor.js?id=654bfca792524dd1b7e9"
 }
